Finalizing plotly image

--- a/capstone-corr.ipynb
+++ b/capstone-corr.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f110e4ad",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "e0937d91",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "2796a65f",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "c19180ca",
    "metadata": {},
    "outputs": [
@@ -97,9 +97,9 @@
     }
    ],
    "source": [
-    "# Quick regression for both high temps and fire size\n",
-    "figure = px.scatter(ca_fire_temps, trendline= 'ols', title='Standardized Yearly High Temp and Average Fire Size')\n",
-    "figure.show('png')"
+    "# Quick regression for both high temps and fire size (converted to png so as to display on Github)\n",
+    "fig = px.scatter(ca_fire_temps, trendline= 'ols', title='Standardized Yearly High Temp and Average Fire Size')\n",
+    "fig.show('png')"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b88e261f",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
          "type": "float"
         }
        ],
-       "ref": "a9d96d86-17c6-466c-9255-37d50112d3c3",
+       "ref": "5f39d1b3-54ed-4866-9b6f-98511ffbf582",
        "rows": [
         [
          "Avg_Hi_Temp(F)",
@@ -198,7 +198,7 @@
        "Avg_Fire_Size         0.587784       1.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
